# qwen-ane-llm

./: .env.example  .gitignore  CMakeLists.txt  IMPLEMENTATION_LOG.md  KNOWN_ISSUES.md  LICENSE  README.md  SPEC.openai-wrapper.md  common.cpp  env.example  generate.cpp  generate.h  main.cpp  run.sh  utils.cpp  utils.h
.serena/: project.yml
core/: ane_lm_c.cpp  ane_runtime.cpp  ane_runtime.h  cpu_ops.cpp  cpu_ops.h  safetensors.cpp  safetensors.h  sampling.cpp  sampling.h  tokenizer.cpp  tokenizer.h
include/ane_lm/: ane_lm_c.h  common.h
models/llm/: qwen3_5.cpp  qwen3_5.h
scripts/: build.sh  install.sh
server/: README.md  __init__.py  __main__.py  main.py  pyproject.toml  tools.py
server/adapters/: ane.py  ane_binding.py
server/api/: protocol.py
server/core/: engine.py
server/qwen_ane_llm_server.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
